Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 5.0.1
-
None
-
Windows10
-
-
e1e962503ad2faed0abddb8062161754f9de3b87
Description
I want set my project's working directory as "%{buildDir}%{BuildConfig:Name}", but Qt Creator show it is a invalid path
Attachments
For Gerrit Dashboard: QTCREATORBUG-26274 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
372497,2 | ProjectExplorer: Make sure the working dir is properly expanded | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |